# DynamicFlow

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: CodeAnalysis.yml  gcov_file_generation.py  installArtifacts.yml  runTests.yml
cmake/: GCov.cmake  MakeLibrary.cmake
samples/: CMakeLists.txt  Sample-01-ancestors.cpp  Sample-01-big-vector-samples.cpp  Sample-01.cpp  Sample-02.cpp  Sample-03.cpp  Sample-04.cpp
samples/Sample-01-big-vector-samples/: CMakeLists.txt  Main.cpp  README.md
samples/Sample-01-big-vector-samples/src/: Sampler.cpp  Sampler.h
samples/Sample-02-long-text-process/: CMakeLists.txt  Dummy-text  LoremIpsum  Main.cpp  README.md
samples/Sample-02-long-text-process/assets/: LoremIpsum  Novel
samples/Sample-02-long-text-process/src/: FlowLogger.cpp  FlowLogger.h  TextIO.cpp  TextIO.h  TextImport.cpp  TextImport.h  WordsParser.cpp  WordsParser.h
samples/Sample-03/: CMakeLists.txt  Main.cpp
samples/Sample-03-concurrent-update-read/: CMakeLists.txt  Main.cpp  README.md
samples/Sample-03-concurrent-update-read/src/: ActionRepeater.h  NodeLogger.cpp  NodeLogger.h  ValueListener.cpp  ValueListener.h
samples/Sample-03-multi-threaded/: CMakeLists.txt  Main.cpp
samples/Sample-03-multi-threaded/src/: NodeLogger.cpp  NodeLogger.h
samples/Sample-03/src/: ActionRepeater.h  NodeLogger.cpp  NodeLogger.h
samples/Sample-04-collisions-detection/: CMakeLists.txt  Main.cpp  README.md
samples/Sample-04-collisions-detection/script/: ShowResults.py
samples/Sample-04-collisions-detection/src/: CollisionDetectionFlow.cpp  CollisionDetectionFlow.h  Polygon.cpp  Polygon.h  ResultsAccumulator.cpp  ResultsAccumulator.h  ShowResults.py
samples/Sample-README/: CMakeLists.txt  Main.cpp
samples/Sample-utils/: CMakeLists.txt  RunScript.cpp  RunScript.h  ShowGraph.py
samples/cmake/: make-sample.cmake
samples/python/: RunScript.cpp  RunScript.h  ShowGraph.py
src/: CMakeLists.txt
src/header/: AncestorsAware.hpp  DescendantsAware.hpp  Error.h  Evaluator.hpp  Flow.h  Node.h  Source.hpp  ValueUser.hpp
src/header/DynamicFlow/: CallBack.h  Error.h  Network.h  Network.hxx  NetworkIO.h  NetworkSerialization.h  Node.h  Node.hpp  Node.hxx  TypeTraits.h  Value.h  Value.hpp  Value.hxx
src/header/DynamicFlow/components/: AncestorsAware.hpp  DescendantsAware.hpp  Evaluator.hpp  TypeExtractor.hpp  ValueOrException.hpp  ValueStorer.hpp  ValueStorerDecorator.hpp
src/header/DynamicFlow/flow/: EntityAware.hpp  EntityCreator.hpp  EntityFinder.hpp  Flow.h  Node.hpp  NodeHandler.hpp  Printer.h  Source.hpp  SourceHandler.hpp  Updater.h  UpdaterFlow.h  UpdaterSources.h
src/header/components/: AncestorsAware.hpp  DescendantsAware.hpp  EvaluateCapable.h  Evaluator.hpp  TypeExtractor.hpp  ValueAware.hpp  ValueEvaluator.hpp  ValueOrException.h  ValueOrException.hpp  ValueStorer.hpp  ValueStorerDecorator.hpp
src/header/flow/: EntityAware.hpp  EntityCreator.hpp  EntityFinder.hpp  Flow.h  FlowEntity.h  Node.hpp  NodeHandler.hpp  Printer.h  Source.hpp  SourceHandler.hpp  UpdateCapable.h  Updater.h  UpdaterFlow.h  UpdaterSources.h
src/src/: Error.cpp  Network.cpp  NetworkIO.cpp  NetworkSerialization.cpp  Node.cpp
src/src/flow/: Flow.cpp  FlowEntity.cpp  Printer.cpp  UpdateCapable.cpp  Updater.cpp  UpdaterFlow.cpp  UpdaterSources.cpp
tests/: CMakeLists.txt  CheckCPlusPlus20.h  Common.h  Test00-callback.cpp  Test00-rethrownable.cpp  Test00-type-traits.cpp  Test01-value-or-exception.cpp  Test01-value.cpp  Test02-ancestors-aware.cpp  Test02-node.cpp  Test03-evaluator.cpp  Test03-network-handlers.cpp  Test04-network-update.cpp  Test04-nodes-creation.cpp  Test05-flow-creation.cpp  Test05-flow.cpp  Test05-network-update-lazyness.cpp  Test06-flow-update.cpp  Test06-network-thread-safety.cpp  Test07-flow-busy-check.cpp  Test08-flow-update-lazyness.cpp  Test09-multi-threaded-update.cpp  ValueAwareTest.hpp  ValueExtractor.cpp  ValueExtractor.h  ValueStorerTest.hpp
